// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`用户注册 foo 1`] = `
Object {
  "data": "world",
  "status": 200,
}
`;

exports[`用户注册 signup 1`] = `
Object {
  "data": Object {
    "token": Any<String>,
    "userId": 1,
  },
  "status": 200,
}
`;
